// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.alternateArguments connection fetches alternate arguments associated to a debate with a cursor 1`] = `
Object {
  "node": Object {
    "alternateArguments": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7TjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk56WXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRGNpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": null,
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7TjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk56QXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRFlpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": null,
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7TjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk5qUXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRFVpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": null,
          },
        },
      ],
      "totalCount": 8,
    },
  },
}
`;

exports[`Internal|Debate.alternateArguments connection fetches alternate arguments associated to a debate without a cursor 1`] = `
Object {
  "node": Object {
    "alternateArguments": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo4ODoiWVRveU9udHBPakE3YVRveE5qRTVPREl3TURBd01EQXdPMms2TVR0ek9qSTNPaUpFWldKaGRHVkJibTl1ZVcxdmRYTkJjbWQxYldWdWRFWnZjakVpTzMwPSI7czo3OiJhZ2FpbnN0IjtzOjcyOiJZVG95T250cE9qQTdhVG94TmpBek5ETTJOell3TURBd08yazZNVHR6T2pFMU9pSmtaV0poZEdWQmNtZDFiV1Z1ZERjaU8zMD0iO30=",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
              "type": "FOR",
              "votes": Object {
                "totalCount": 1,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTlRnd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWREUWlPMzA9IjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk56QXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRFlpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
              "type": "FOR",
              "votes": Object {
                "totalCount": 0,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTlRJd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRETWlPMzA9IjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk5qUXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRFVpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
              "type": "FOR",
              "votes": Object {
                "totalCount": 0,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTkRZd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRESWlPMzA9IjtzOjc6ImFnYWluc3QiO047fQ==",
          "node": Object {
            "against": null,
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
              "type": "FOR",
              "votes": Object {
                "totalCount": 2,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTkRBd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRERWlPMzA9IjtzOjc6ImFnYWluc3QiO047fQ==",
          "node": Object {
            "against": null,
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
              "type": "FOR",
              "votes": Object {
                "totalCount": 1,
              },
            },
          },
        },
      ],
      "totalCount": 8,
    },
  },
}
`;

exports[`Internal|Debate.alternateArguments connection sort alternate arguments associated to a debate by their number of votes 1`] = `
Object {
  "node": Object {
    "alternateArguments": Object {
      "edges": Array [
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTkRZd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRESWlPMzA9IjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk5qUXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRFVpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ1",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQy",
              "type": "FOR",
              "votes": Object {
                "totalCount": 2,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo4ODoiWVRveU9udHBPakE3YVRveE5qRTVPREl3TURBd01EQXdPMms2TVR0ek9qSTNPaUpFWldKaGRHVkJibTl1ZVcxdmRYTkJjbWQxYldWdWRFWnZjakVpTzMwPSI7czo3OiJhZ2FpbnN0IjtzOjcyOiJZVG95T250cE9qQTdhVG94TmpBek5ETTJOekF3TURBd08yazZNVHR6T2pFMU9pSmtaV0poZEdWQmNtZDFiV1Z1ZERZaU8zMD0iO30=",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ2",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6RGViYXRlQW5vbnltb3VzQXJndW1lbnRGb3Ix",
              "type": "FOR",
              "votes": Object {
                "totalCount": 1,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTkRBd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRERWlPMzA9IjtzOjc6ImFnYWluc3QiO3M6NzI6IllUb3lPbnRwT2pBN2FUb3hOakF6TkRNMk56WXdNREF3TzJrNk1UdHpPakUxT2lKa1pXSmhkR1ZCY21kMWJXVnVkRGNpTzMwPSI7fQ==",
          "node": Object {
            "against": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ3",
              "type": "AGAINST",
              "votes": Object {
                "totalCount": 0,
              },
            },
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQx",
              "type": "FOR",
              "votes": Object {
                "totalCount": 1,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTlRJd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWRETWlPMzA9IjtzOjc6ImFnYWluc3QiO047fQ==",
          "node": Object {
            "against": null,
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQz",
              "type": "FOR",
              "votes": Object {
                "totalCount": 0,
              },
            },
          },
        },
        Object {
          "cursor": "YToyOntzOjM6ImZvciI7czo3MjoiWVRveU9udHBPakE3YVRveE5qQXpORE0yTlRnd01EQXdPMms2TVR0ek9qRTFPaUprWldKaGRHVkJjbWQxYldWdWREUWlPMzA9IjtzOjc6ImFnYWluc3QiO047fQ==",
          "node": Object {
            "against": null,
            "for": Object {
              "id": "RGViYXRlQXJndW1lbnQ6ZGViYXRlQXJndW1lbnQ0",
              "type": "FOR",
              "votes": Object {
                "totalCount": 0,
              },
            },
          },
        },
      ],
      "totalCount": 8,
    },
  },
}
`;
